changes in erole